retrieveNA31/objects/Core_IPS_Project__c.object
<CustomObject>
    <description>IPS Project</description>
    <fields>
        <fullName>Core_IPS_GroupId__c</fullName>
        <label>GroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Legacy_Collab_Team_ID__c</fullName>
        <description>Used for linking legacy Collaboration Teams to new IPS Cloud Project ID&apos;s</description>
        <externalId>true</externalId>
        <label>Legacy Collab Team ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Core_IPS_Project_ID__c</fullName>
        <description>Unique IPS Project object Identifier related to IPS Projects on Case</description>
        <displayFormat>IPJ-{000000}</displayFormat>
        <label>Premier Support Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Unique_Project_Number__c</fullName>
        <displayFormat>Proj-{0000000}</displayFormat>
        <label>Unique Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Core_MPNDA__c</fullName>
        <label>MPNDA</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Number_of_Accounts__c</fullName>
        <label>Number of Accounts</label>
        <summaryForeignKey>Core_IPS_Account__c.Core_IPS_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Core_Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Core_IPS_Opportunity__c.Core_IPS_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Core_Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <summaryForeignKey>Core_IPS_Product__c.Core_IPS_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Core_Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <summaryForeignKey>Core_IPS_Project_Member__c.Core_IPS_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Core_Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Premier Support Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Core_IPS_Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Core_MPNDA__c</columns>
        <columns>Core_Number_of_Accounts__c</columns>
        <columns>Core_Number_of_Products__c</columns>
        <columns>Core_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Status__c</field>
            <operation>equals</operation>
            <value>Inactive,Active,New,Submitted Pending</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Projects_Active</fullName>
        <columns>NAME</columns>
        <columns>Core_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Projects_External</fullName>
        <columns>NAME</columns>
        <columns>Core_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Status__c</field>
            <operation>equals</operation>
            <value>Inactive,Active</value>
        </filters>
        <label>All Projects</label>
    </listViews>
    <nameField>
        <label>Premier Support Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premier Support Projects</pluralLabel>
    <recordTypes>
        <fullName>Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_IPS_Active_After_Submit</fullName>
        <active>true</active>
        <label>xx_Active(After Submit)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive</fullName>
        <active>true</active>
        <label>xx_Inactive</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Project_cannot_be_activated</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Core_Status__c,&apos;New&apos;), 
Core_Number_of_Accounts__c = 0,
Core_Number_of_Products__c = 0
)</errorConditionFormula>
        <errorMessage>Project cannot be submitted without atleast one Account and one Product</errorMessage>
    </validationRules>
</CustomObject>